--- a/package.json
+++ b/package.json
@@ -6,18 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@mui/material": "^5.16.4",
+    "@mui/x-charts": "^7.11.0",
+    "@mui/x-date-pickers": "^7.11.0",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "cookie": "^0.6.0",
+    "dayjs": "^1.11.12",
+    "js-cookie": "^3.0.5",
+    "moment-jalaali": "^0.7.4",
+    "next": "latest",
     "react": "latest",
+    "react-cookie": "^7.2.0",
     "react-dom": "latest",
-    "next": "latest"
+    "react-icons": "^5.2.1",
+    "react-loading-skeleton": "^3.5.0",
+    "react-multi-date-picker": "^4.5.2",
+    "react-select": "^5.8.3",
+    "react-toastify": "^10.0.5",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
     "eslint": "latest",
-    "eslint-config-next": "latest"
+    "eslint-config-next": "latest",
+    "jest": "^29.7.0",
+    "postcss": "latest",
+    "tailwindcss": "latest"
   }
 }
