--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 
 # server env
-# NEXT_PUBLIC_BACKEND_API_URL=https://doctoryar-expressjs.onrender.com/api
-# BACKEND_DOMAIN=https://doctoryar-expressjs.onrender.com/
-# NEXT_PUBLIC_APP_API_URL=https://doctoryar-nextjs-olgnxd3cs-mahmoudpirastes-projects.vercel.app/api
-# NEXT_PUBLIC_APP_URL=https://doctoryar-nextjs-olgnxd3cs-mahmoudpirastes-projects.vercel.app/
+ NEXT_PUBLIC_BACKEND_API_URL=https://doctoryar-expressjs.onrender.com/api
+ BACKEND_DOMAIN=https://doctoryar-expressjs.onrender.com/
+ NEXT_PUBLIC_APP_API_URL=https://doctoryar-nextjs-olgnxd3cs-mahmoudpirastes-projects.vercel.app/api
+ NEXT_PUBLIC_APP_URL=https://doctoryar-nextjs-olgnxd3cs-mahmoudpirastes-projects.vercel.app/
 
 
 # local .env
-NEXT_PUBLIC_BACKEND_API_URL=http://localhost:8003/api
-BACKEND_DOMAIN=localhost
-NEXT_PUBLIC_APP_API_URL=http://localhost:3000/api
-NEXT_PUBLIC_APP_URL=http://localhost:3000/
+# NEXT_PUBLIC_BACKEND_API_URL=http://localhost:8003/api
+# BACKEND_DOMAIN=localhost
+# NEXT_PUBLIC_APP_API_URL=http://localhost:3000/api
+# NEXT_PUBLIC_APP_URL=http://localhost:3000/
